# swc-plugin-translation-converter

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  swc_plugin_translation_converter.wasm
.husky/: pre-commit
src/: lib.rs  utils.rs
src/builders/: lib.rs  serializers.rs  utils.rs
tests/__swc_snapshots__/src/lib.rs/: converts_cond_expr_with_l_in_functions.js  converts_l_member_expressions_inside_of_t_func_with_variables.js  converts_l_member_expressions_inside_of_t_functions.js  converts_l_nested_in_template_literals.js  converts_l_template_literal_member_expressions_with_computed_member_expressions.js  converts_l_template_literal_member_expressions_with_expression_in_middle.js  converts_l_template_literal_member_expressions_with_nested_conditional.js  converts_l_template_literal_member_expressions_with_trailing_quasis.js  converts_l_template_literal_member_expressions_with_variable_namespace.js  converts_l_that_is_outside_of_t_inside_a_function.js  converts_l_that_is_part_of_ternary.js  converts_l_to_template_literal_member_expressions.js  converts_l_with_many_nested_namesapces.js  converts_nested_l_member_expression.js  converts_nested_t_functions.js  converts_trans_i18n_key.js  converts_trans_nested_in_call_expr_in_jsx_expr.js  does_not_convert_member_expressions_that_do_not_start_with_l.js
