[package]
authors = ["Ryan O'Connor <charle692@gmail.com>"]
description = "SWC plugin for converting Fullscript translations into react-i18next compatible code"
edition = "2021"
license = "MIT"
name = "swc-plugin-translation-converter"
version = "2.0.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = false

[dependencies]
serde = "1"
serde_json = "1.0.87"
swc_core = { version = "19.0.0", features = [
  "ecma_plugin_transform",
  "common",
] }
swc_ecma_visit = { version = "8.0.0" }
swc_ecma_ast = { version = "8.1.0" }
swc_ecma_parser = { version = "11.0.0", features = [
  "typescript",
] }
swc_visit = { version = "2.0.0" }
