[package]
authors = ["Ryan O'Connor <charle692@gmail.com>"]
description = "SWC plugin for converting Fullscript translations into react-i18next compatible code"
edition = "2021"
license = "MIT"
name = "swc-plugin-translation-converter"
version = "3.0.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = false

[dependencies]
serde = "1.0.203"
serde_json = "1.0.117"
swc_core = { version = "46.0.1", features = [
  "ecma_plugin_transform",
  "common",
] }
swc_ecma_visit = { version = "17.0.0" }
swc_ecma_ast = { version = "17.0.0" }
swc_ecma_parser = { version = "26.0.0", features = [
  "typescript",
] }
